invalid_var_type_arg_keywords_test/invalid_var_type_arg_keywords_test_8.src
.IPPcode24
READ bool TF@a